--- a/28-08/style.css
+++ b/28-08/style.css
@@ -21,3 +21,7 @@ p{
 /*RGB - rba(200,200,200)*/
 /*HSL*/
 /*RGBA*/
+
+body{
+    background-image: url('https://t3.gstatic.com/licensed-image?q=tbn:ANd9GcT1g1V8Nalm9FkR2atv7annUXbPvk5g-mWffaNxT_ItIFogl-6mC_lHNifw5Tw9-yiS');
+}
