--- a/11-09/style.css
+++ b/11-09/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+h1{
+    margin:0;
+}
 /*#id, .class, tag*/
 p{
     font-family: "Roboto", sans-serif;
@@ -26,6 +29,64 @@ p{
     padding: 10px 30px 40px 50px;/*4 lados diferentes - Sentido horário(top right bottom left)*/
     
 
-    border: 2px solid red;
 
+    /*Margin- espaço entre elementos - fora da caixa*/
+    margin-top: 100px;/*para cima*/
+    margin-right: 50px;/*margem para direita*/
+    margin-bottom: 300px;/*Para baixo*/
+    margin-left: 100px;/*Para esquerda*/
+
+    /*shorthand*/
+    margin: 80px;/*4 lados iguais*/
+    margin: 200px 100px;/*cima/baixo esquerda/direita*/
+    margin: 100px 50px 300px 100px ;/*top right bottom left*/
+    
+
+    /*borda - border*/
+
+    border-color: red;/*cor da borda*/
+    border-width:5px;/*espessura da borda*/
+    border-style: double;/* estilo da linha- solid, dashed, dotted, double*/
+
+    /*Shorthand*/
+
+    /*border: width style color*/
+
+    border: 6px solid green;
+
+    /*border-radius - arredondamento das vértices*/
+
+    border-radius: 20%;/*4 lados são iguais*/
+    border-radius: 50px 40px 80px 100px;/*4 lados diferentes - topesquerda, topdireita inferiordireita inferioresquerda*/
+    border-radius: 50px 100px;/* superioresquerda e inferiordireita superiordireita inferioresquerda*/
+
+}
+
+img{
+    /*Unidade de medida: % px em vh vw rem*/
+    width: 500px;/*largura*/
+    /* height: 300px;altura */
+}
+
+/*media query - condição para determinado elemento*/
+/*min-height, min-width, max-height, max-width*/
+
+@media (max-width: 320px){
+    img{
+        width: 30px;
+    }
+}
+
+@media(min-width: 600px){
+    img{
+        width: 100%;
+    }
+}
+
+/* and(&&), or||, !*/
+
+@media screen and (max-width: 600px){
+    p{
+        color: red;
+    }
 }
